--- a/services/package.json
+++ b/services/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "lodash": "^4.17.4",
-    "pg": "^6.1.2"
+    "pg": "^6.1.2",
+    "uuid": "^3.0.1"
   }
 }
